--- a/packages/ieu-js-sdk/package.json
+++ b/packages/ieu-js-sdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ali-ieu/ieu-js-sdk",
-    "version": "0.0.17-beta.1",
+    "version": "1.0.0",
     "description": "@ali-ieu/ieu-js-sdk",
     "main": "index.js",
     "module": "dist/ieu-js-sdk.esm-bundler.js",
@@ -23,5 +23,19 @@
         "url": "https://github.com/ali-ieu/ieu-js-sdk/issues"
     },
     "homepage": "https://github.com/ali-ieu/ieu-js-sdk/#quickstart",
-    "sideEffects": []
+    "sideEffects": [],
+    "dependencies": {
+        "@ali-ieu/shared": "1.0.0",
+        "@ali-ieu/ejoysdk": "1.0.0",
+        "@ali-ieu/third-party": "1.0.0"
+    },
+    "buildOptions": {
+        "formats": [
+            "esm-bundler",
+            "cjs",
+            "global",
+            "esm-browser"
+        ],
+        "name": "IeuSDK"
+    }
 }
