--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.17-beta.1",
+    "version": "1.0.0",
     "private": true,
     "workspaces": [
         "packages/*"
@@ -9,7 +9,7 @@
         "@babel/preset-env": "^7.12.11",
         "@commitlint/cli": "^11.0.0",
         "@commitlint/config-conventional": "^11.0.0",
-        "@microsoft/api-extractor": "^7.13.0",
+        "@microsoft/api-extractor": "^7.13.2",
         "@rollup/plugin-babel": "^5.2.2",
         "@rollup/plugin-commonjs": "^17.0.0",
         "@rollup/plugin-image": "^2.0.6",
@@ -37,7 +37,7 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.27.3",
         "ts-jest": "^26.4.1",
-        "typescript": "^4.0.3"
+        "typescript": "^4.2.3"
     },
     "scripts": {
         "test": "npm run lint && npm run test:unit",
