--- a/packages/ieu-js-sdk/package.json
+++ b/packages/ieu-js-sdk/package.json
@@ -25,8 +25,9 @@
     "homepage": "https://github.com/ali-ieu/ieu-js-sdk/#quickstart",
     "sideEffects": [],
     "dependencies": {
-        "@ali-ieu/shared": "1.0.0",
         "@ali-ieu/ejoysdk": "1.0.0",
+        "@ali-ieu/shared": "1.0.0",
+        "@ali-ieu/social-share": "^1.0.0",
         "@ali-ieu/third-party": "1.0.0"
     },
     "buildOptions": {
