chore: add ci & dependabot workflow

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Deploy Docs
 on:
     push:
         paths:
-            # - 'docs/**'
+            - 'docs/**'
 jobs:
     deploy-docs:
         runs-on: ubuntu-latest
