--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -3,5 +3,4 @@ updates:
     - package-ecosystem: npm
       directory: '/'
       schedule:
-          interval: weekly
-      open-pull-requests-limit: 10
+          interval: daily
