feat(big-eye): add rollup build type

--- a/packages/big-eye/package.json
+++ b/packages/big-eye/package.json
@@ -30,6 +30,8 @@
     "buildOptions": {
         "formats": [
             "esm-bundler",
+            "cjs",
+            "global",
             "esm-browser"
         ],
         "name": "IeuBigEye"
