--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
         "importsNotUsedAsValues": "error",
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "noUnusedParameters": true,
         "strict": true,
 
