--- a/packages/big-eye/package.json
+++ b/packages/big-eye/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ali-ieu/big-eye",
-    "version": "2.0.3",
+    "version": "2.1.0-beta.1",
     "description": "@ali-ieu/big-eye",
     "main": "index.js",
     "module": "dist/big-eye.esm-bundler.js",
