--- a/packages/ieu-js-sdk/package.json
+++ b/packages/ieu-js-sdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ali-ieu/ieu-js-sdk",
-    "version": "2.0.3",
+    "version": "2.1.0-beta.1",
     "description": "@ali-ieu/ieu-js-sdk",
     "main": "index.js",
     "module": "dist/ieu-js-sdk.esm-bundler.js",
@@ -25,11 +25,11 @@
     "homepage": "https://github.com/ali-ieu/ieu-js-sdk/#quickstart",
     "sideEffects": [],
     "dependencies": {
-        "@ali-ieu/ejoysdk": "2.0.3",
-        "@ali-ieu/shared": "2.0.3",
-        "@ali-ieu/social-share": "2.0.3",
-        "@ali-ieu/third-party": "2.0.3",
-        "@ali-ieu/big-eye": "2.0.3"
+        "@ali-ieu/ejoysdk": "2.1.0-beta.1",
+        "@ali-ieu/shared": "2.1.0-beta.1",
+        "@ali-ieu/social-share": "2.1.0-beta.1",
+        "@ali-ieu/third-party": "2.1.0-beta.1",
+        "@ali-ieu/big-eye": "2.1.0-beta.1"
     },
     "buildOptions": {
         "formats": [
