--- a/packages/social-share/package.json
+++ b/packages/social-share/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ali-ieu/social-share",
-    "version": "2.0.3",
+    "version": "2.1.0-beta.1",
     "description": "@ali-ieu/social-share",
     "main": "index.js",
     "module": "dist/social-share.esm-bundler.js",
@@ -25,8 +25,8 @@
     "homepage": "https://github.com/ali-ieu/ieu-js-sdk/#quickstart",
     "sideEffects": [],
     "dependencies": {
-        "@ali-ieu/shared": "2.0.3",
-        "@ali-ieu/ejoysdk": "2.0.3"
+        "@ali-ieu/shared": "2.1.0-beta.1",
+        "@ali-ieu/ejoysdk": "2.1.0-beta.1"
     },
     "buildOptions": {
         "formats": [
