--- a/packages/ejoysdk/package.json
+++ b/packages/ejoysdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ali-ieu/ejoysdk",
-    "version": "2.1.0-beta.2",
+    "version": "2.1.0",
     "description": "@ali-ieu/ejoysdk",
     "main": "index.js",
     "module": "dist/ejoysdk.esm-bundler.js",
@@ -25,7 +25,7 @@
     "homepage": "https://github.com/ali-ieu/ieu-js-sdk/#quickstart",
     "sideEffects": [],
     "dependencies": {
-        "@ali-ieu/shared": "2.1.0-beta.2"
+        "@ali-ieu/shared": "2.1.0"
     },
     "buildOptions": {
         "formats": [
